--- a/OneDrive/Documentos/NetBeansProjects/FinalProjectWeb/src/main/webapp/WEB-INF/web.xml
+++ b/OneDrive/Documentos/NetBeansProjects/FinalProjectWeb/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>TestBooks</servlet-name>
         <servlet-class>control.NewServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EditBookServlet</servlet-name>
+        <servlet-class>control.EditBookServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ServletAppClients</servlet-name>
         <url-pattern>/ServletAppClients</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>TestBooks</servlet-name>
         <url-pattern>/NewServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditBookServlet</servlet-name>
+        <url-pattern>/EditBookServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
